# Debloater-win

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  SETUP_COMPLETE.md  index.html  package-lock.json  package.json
.github/: WORKFLOWS.md
.github/workflows/: build.yml  ci.yml  dev-build.yml
data/: apps.json  presets.json  privacy.json  registry.json  services.json  system.json  updates.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/cards/: CategoryPage.tsx
src/components/modals/: ProgressModal.tsx
src/components/ui/: button.tsx  card.tsx  switch.tsx
src/hooks/: useDebloatItems.ts  useExecution.ts  usePresets.ts  useSystemInfo.ts
src/pages/apps/: index.tsx
src/pages/dashboard/: index.tsx
src/pages/privacy/: index.tsx
src/pages/registry/: index.tsx
src/pages/services/: index.tsx
src/pages/system/: index.tsx
src/pages/updates/: index.tsx
src/store/: useAppStore.ts
src/types/: index.ts
